--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -33,7 +33,7 @@ disabled = false
 format = "[$symbol $status]($style) "
 not_found_symbol = ""
 not_executable_symbol = ""
-sigint_symbol = "ﭦ"
+sigint_symbol = "󰙧" # nf-md-stop_circle_outline
 map_symbol = true
 
 [git_branch]
@@ -41,7 +41,7 @@ format = "[$symbol$branch]($style) "
 
 [package]
 format = "[$symbol$version]($style) "
-symbol = " "
+symbol = "󰏗 " # nf-md-package_variant_closed
 
 [python]
 format = '[${symbol}${pyenv_prefix}(${version} )(\($virtualenv\) )]($style)'
@@ -56,17 +56,17 @@ symbol = " "
 
 [java]
 format = "[${symbol}(${version} )]($style)"
-symbol = " "
+symbol = " " # nf-fae-java
 
 [rust]
 format = "[$symbol($version )]($style)"
 
 [golang]
 format = "[$symbol($version )]($style)"
-symbol = " "
+symbol = " " # nf-seti-go
 
 [battery]
-full_symbol = " "
-charging_symbol = "⚡️ "
-discharging_symbol = " "
-empty_symbol = " "
+full_symbol = "󰁹 " # nf-md-battery
+charging_symbol = "󱐋 " # nf-md-lightning_bolt
+discharging_symbol = "󰂃 " # nf-md-battery_alert
+empty_symbol = "󰂎 " # nf-md-battery_outline
