Updated starship prompt location and added nodejs npm and yarn packages in .pkgs

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -20,7 +20,7 @@ style = "purple"
 format = "[$localipv4]($style) "
 
 [line_break]
-disabled = true
+disabled = false
 
 [directory]
 style = "bold blue"
