Removed git-config.sh and added .gitconfig and .ssh/config.template config files

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,11 @@
 !.xprofile
 !.Xresources
 !.config
-!git-config.sh
 !.xephyr
 !.pkgs
 !.aur-pkgs
 !.files
+
+# Git config file
+!.gitconfig
+!.ssh
